[package]
name = "d2auto"
version = "0.1.0"
edition = "2024"

[dependencies]
x11rb = { version = "0.13", features = ["all-extensions"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
device_query = "2.1.0"
rdev = "0.5.3"